# Genaimo_blender_addon

./: README.md  blender_manifest.toml  pyproject.toml
genaimo_addon/: __init__.py  blender.py  genaimo_addon.py  globals.py  operators.py  properties.py  ui.py
genaimo_addon/data/model/: dummy-g-mo.glb
